--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,418 @@
-@article{fornero2011effect,
-  title={The effect of financial literacy on mortgage choices},
-  author={Fornero, Elsa and Monticone, Chiara and Trucchi, Serena},
-  year={2011},
-  publisher={Netspar Discussion Paper}
+@article{acemoglu2012,
+  title = {The {{Network Origins}} of {{Aggregate Fluctuations}}},
+  author = {Acemoglu, Daron and Carvalho, Vasco M. and Ozdaglar, Asuman and {Tahbaz-Salehi}, Alireza},
+  year = {2012},
+  journal = {Econometrica},
+  volume = {80},
+  number = {5},
+  pages = {1977--2016},
+  issn = {1468-0262},
+  doi = {10.3982/ECTA9623},
+  urldate = {2024-10-29},
+  abstract = {This paper argues that, in the presence of intersectoral input--output linkages, microeconomic idiosyncratic shocks may lead to aggregate fluctuations. We show that, as the economy becomes more disaggregated, the rate at which aggregate volatility decays is determined by the structure of the network capturing such linkages. Our main results provide a characterization of this relationship in terms of the importance of different sectors as suppliers to their immediate customers, as well as their role as indirect suppliers to chains of downstream sectors. Such higher-order interconnections capture the possibility of ``cascade effects'' whereby productivity shocks to a sector propagate not only to its immediate downstream customers, but also to the rest of the economy. Our results highlight that sizable aggregate volatility is obtained from sectoral idiosyncratic shocks only if there exists significant asymmetry in the roles that sectors play as suppliers to others, and that the ``sparseness'' of the input--output matrix is unrelated to the nature of aggregate fluctuations.},
+  copyright = {{\copyright} 2012 The Econometric Society},
+  langid = {english},
+  keywords = {aggregate volatility,Business cycle,cascades,diversification,input-output linkages,intersectoral network},
+  file = {/Users/xolanisibande/Zotero/storage/IAZPF2LF/Acemoglu et al. - 2012 - The Network Origins of Aggregate Fluctuations.pdf}
+}
+
+@article{acemoglu2016,
+  title = {Networks and the {{Macroeconomy}}: {{An Empirical Exploration}}},
+  shorttitle = {Networks and the {{Macroeconomy}}},
+  author = {Acemoglu, Daron and Akcigit, Ufuk and Kerr, William},
+  year = {2016},
+  month = jan,
+  journal = {NBER Macroeconomics Annual},
+  volume = {30},
+  number = {1},
+  pages = {273--335},
+  issn = {0889-3365, 1537-2642},
+  doi = {10.1086/685961},
+  urldate = {2024-10-29},
+  langid = {english},
+  file = {/Users/xolanisibande/Zotero/storage/PK7J7XFN/Acemoglu et al. - 2016 - Networks and the Macroeconomy An Empirical Explor.pdf}
+}
+
+@techreport{bakkensen2018,
+  title = {Climate Shocks, Cyclones, and Economic Growth: Bridging the Micro-Macro Gap},
+  shorttitle = {Climate Shocks, Cyclones, and Economic Growth},
+  author = {Bakkensen, Laura and Barrage, Lint},
+  year = {2018},
+  institution = {National Bureau of Economic Research},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/EH8FMDA6/Bakkensen and Barrage - 2018 - Climate shocks, cyclones, and economic growth bri.pdf}
+}
+
+@article{baqaee2019,
+  title = {The {{Macroeconomic Impact}} of {{Microeconomic Shocks}}: {{Beyond Hulten}}'s {{Theorem}}},
+  shorttitle = {The {{Macroeconomic Impact}} of {{Microeconomic Shocks}}},
+  author = {Baqaee, David Rezza and Farhi, Emmanuel},
+  year = {2019},
+  journal = {Econometrica},
+  volume = {87},
+  number = {4},
+  pages = {1155--1203},
+  issn = {0012-9682},
+  doi = {10.3982/ECTA15202},
+  urldate = {2024-10-29},
+  abstract = {We provide a nonlinear characterization of the macroeconomic impact of microeconomic productivity shocks in terms of reduced-form nonparametric elasticities for efficient economies. We also show how microeconomic parameters are mapped to these reduced-form general equilibrium elasticities. In this sense, we extend the foundational theorem of Hulten (1978) beyond the first order to capture nonlinearities. Key features ignored by first-order approximations that play a crucial role are: structural microeconomic elasticities of substitution, network linkages, structural microeconomic returns to scale, and the extent of factor reallocation. In a business-cycle calibration with sectoral shocks, nonlinearities magnify negative shocks and attenuate positive shocks, resulting in an aggregate output distribution that is asymmetric (negative skewness), fat-tailed (excess kurtosis), and has a negative mean, even when shocks are symmetric and thin-tailed. Average output losses due to short-run sectoral shocks are an order of magnitude larger than the welfare cost of business cycles calculated by Lucas (1987). Nonlinearities can also cause shocks to critical sectors to have disproportionate macroeconomic effects, almost tripling the estimated impact of the 1970s oil shocks on world aggregate output. Finally, in a long-run growth context, nonlinearities, which underpin Baumol's cost disease via the increase over time in the sales shares of low-growth bottleneck sectors, account for a 20 percentage point reduction in aggregate TFP growth over the period 1948--2014 in the United States.},
+  langid = {english},
+  file = {/Users/xolanisibande/Zotero/storage/4LP5BSMY/Baqaee and Farhi - 2019 - The Macroeconomic Impact of Microeconomic Shocks .pdf}
+}
+
+@article{buelens2024,
+  title = {Climate Change and Its Implications for Prices and Inflation},
+  author = {Buelens, Christian},
+  year = {2024},
+  journal = {Quarterly Report on the Euro Area (QREA)},
+  volume = {23},
+  number = {1},
+  pages = {23--40},
+  publisher = {{Directorate General Economic and Financial Affairs (DG ECFIN), European {\dots}}},
+  urldate = {2024-10-29}
+}
+
+@article{burke2015,
+  title = {Global Non-Linear Effect of Temperature on Economic Production},
+  author = {Burke, Marshall and Hsiang, Solomon M. and Miguel, Edward},
+  year = {2015},
+  journal = {Nature},
+  volume = {527},
+  number = {7577},
+  pages = {235--239},
+  publisher = {Nature Publishing Group},
+  urldate = {2024-10-29}
+}
+
+@book{cevik2023,
+  title = {Eye of the {{Storm}}: {{The Impact}} of {{Climate Shocks}} on {{Inflation}} and {{Growth}}},
+  shorttitle = {Eye of the {{Storm}}},
+  author = {Cevik, Mr Serhan and Jalles, Jo{\~a}o Tovar},
+  year = {2023},
+  month = apr,
+  publisher = {International Monetary Fund},
+  abstract = {What is the impact of climate change on inflation and growth dynamics? This is not a simple question to answer as climate shocks tend to be ubiquitous, but with opposing effects simultaneously on demand and supply. The extent of which climate-related shocks affect inflation and economic growth also depends on long-run scarring in the economy and the country's fiscal and institutional capacity to support recovery. In this paper, we use the local projection method to empirically investigate how climate shocks, as measured by climate-induced natural disasters, influence inflation and economic growth in a large panel of countries over the period 1970--2020. The results shows that both inflation and real GDP growth respond significantly but also differently in terms of direction and magnitude to different types of disasters caused by climate change. We split the full sample of countries into income groups---advanced economies and developing countries---and find a striking contrast in the impact of climate shocks on inflation and growth according to income level, state of the economy, and fiscal space when the shock hits.},
+  googlebooks = {O3e\_EAAAQBAJ},
+  isbn = {9798400241307},
+  langid = {english},
+  keywords = {Business & Economics / Economics / General,Business & Economics / Economics / Macroeconomics,Business & Economics / Environmental Economics,Business & Economics / Inflation,Nature / Natural Disasters}
+}
+
+@article{ciccarelli2023,
+  title = {The Asymmetric Effects of Weather Shocks on Euro Area Inflation},
+  author = {Ciccarelli, Matteo and Kuik, Friderike and Hern{\'a}ndez, Catalina Mart{\'i}nez},
+  year = {2023},
+  publisher = {ECB Working Paper},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/7TB7DBPV/Ciccarelli et al. - 2023 - The asymmetric effects of weather shocks on euro a.pdf}
+}
+
+@article{colacito2019,
+  title = {Temperature and {{Growth}}: {{A Panel Analysis}} of the {{United States}}},
+  shorttitle = {Temperature and {{Growth}}},
+  author = {Colacito, Riccardo and Hoffmann, Bridget and Phan, Toan},
+  year = {2019},
+  month = mar,
+  journal = {Journal of Money, Credit and Banking},
+  volume = {51},
+  number = {2-3},
+  pages = {313--368},
+  issn = {0022-2879, 1538-4616},
+  doi = {10.1111/jmcb.12574},
+  urldate = {2024-10-29},
+  abstract = {Abstract                            We document that seasonal temperatures have significant and systematic effects on the U.S. economy, both at the aggregate level and across a wide cross section of economic sectors. This effect is particularly strong for the summer: a                              F increase in the average summer temperature is associated with a reduction in the annual growth rate of state-level output of 0.15 to 0.25 percentage points. We combine our estimates with projected increases in seasonal temperatures and find that rising temperatures could reduce U.S. economic growth by up to one-third over the next century.},
+  langid = {english},
+  file = {/Users/xolanisibande/Zotero/storage/CHNZCEFA/Colacito et al. - 2019 - Temperature and Growth A Panel Analysis of the Un.pdf}
+}
+
+@book{das2021,
+  title = {Sectoral Shocks and Spillovers: An Application to {{COVID-19}}},
+  shorttitle = {Sectoral Shocks and Spillovers},
+  author = {Das, Mr Sonali and Magistretti, Giacomo and Pugacheva, Evgenia and Wingender, Mr Philippe},
+  year = {2021},
+  publisher = {International Monetary Fund},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/YN55XM5K/Das et al. - 2021 - Sectoral shocks and spillovers an application to .pdf}
+}
+
+@article{delima2021,
+  title = {Heat Stress on Agricultural Workers Exacerbates Crop Impacts of Climate Change},
+  author = {De Lima, Cicero Z. and Buzan, Jonathan R. and Moore, Frances C. and Baldos, Uris Lantz C. and Huber, Matthew and Hertel, Thomas W.},
+  year = {2021},
+  journal = {Environmental Research Letters},
+  volume = {16},
+  number = {4},
+  pages = {044020},
+  publisher = {IOP Publishing},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/Z75X5EEV/De Lima et al. - 2021 - Heat stress on agricultural workers exacerbates cr.pdf}
+}
+
+@techreport{dewinne2018,
+  title = {Agricultural Price Shocks and Business Cycles-a Global Warning for Advanced Economies},
+  author = {De Winne, Jasmien and Peersman, Gert},
+  year = {2018},
+  institution = {CESifo Working Paper},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/G2W47EWS/De Winne and Peersman - 2018 - Agricultural price shocks and business cycles-a gl.pdf}
+}
+
+@article{faccia2021,
+  title = {Feeling the Heat: Extreme Temperatures and Price Stability},
+  shorttitle = {Feeling the Heat},
+  author = {Faccia, Donata and Parker, Miles and Stracca, Livio},
+  year = {2021},
+  publisher = {ECB Working Paper},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/EC5TKRDG/Faccia et al. - 2021 - Feeling the heat extreme temperatures and price s.pdf}
+}
+
+@article{heinen2019,
+  title = {The Price Impact of Extreme Weather in Developing Countries},
+  author = {Heinen, Andr{\'e}as and Khadan, Jeetendra and Strobl, Eric},
+  year = {2019},
+  journal = {The Economic Journal},
+  volume = {129},
+  number = {619},
+  pages = {1327--1342},
+  publisher = {Oxford University Press},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/ZKX7GHY4/Heinen et al. - 2019 - The price impact of extreme weather in developing .pdf}
+}
+
+@article{jorda2005,
+  title = {Estimation and Inference of Impulse Responses by Local Projections},
+  author = {Jord{\`a}, {\`O}scar},
+  year = {2005},
+  journal = {American economic review},
+  volume = {95},
+  number = {1},
+  pages = {161--182},
+  publisher = {American Economic Association},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/NDIBYX3D/Jordà - 2005 - Estimation and inference of impulse responses by l.pdf}
+}
+
+@article{kabundi2022,
+  title = {How Persistent Are Climate-Related Price Shocks? Implications for Monetary Policy},
+  shorttitle = {How Persistent Are Climate-Related Price Shocks?},
+  author = {Kabundi, Alain and Mlachila, Montfort and Yao, Jiaxiong},
+  year = {2022},
+  publisher = {IMF Working Paper},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/G9RX6IDA/Kabundi et al. - 2022 - How persistent are climate-related price shocks i.pdf}
+}
+
+@techreport{kamber2013,
+  title = {Drying out: {{Investigating}} the Economic Effects of Drought in {{New Zealand}}},
+  shorttitle = {Drying Out},
+  author = {Kamber, G{\"u}nes and McDonald, Chris and Price, Gael},
+  year = {2013},
+  institution = {Reserve Bank of New Zealand Wellington},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/M49BILPU/Kamber et al. - 2013 - Drying out Investigating the economic effects of .pdf}
+}
+
+@book{kjellstrom2019,
+  title = {Working on a Warmer Planet: {{The}} Effect of Heat Stress on Productivity and Decent Work},
+  shorttitle = {Working on a Warmer Planet},
+  author = {Kjellstr{\"o}m, Tord and Ma{\^i}tre, Nicolas and Saget, Catherine and Otto, Matthias and Karimova, Takhmina},
+  year = {2019},
+  publisher = {International Labour Organization}
+}
+
+@article{klomp2020,
+  title = {Do Natural Disasters Affect Monetary Policy? {{A}} Quasi-Experiment of Earthquakes},
+  shorttitle = {Do Natural Disasters Affect Monetary Policy?},
+  author = {Klomp, Jeroen},
+  year = {2020},
+  journal = {Journal of Macroeconomics},
+  volume = {64},
+  pages = {103164},
+  publisher = {Elsevier},
+  urldate = {2024-10-29}
+}
+
+@article{kotz2024,
+  title = {Global Warming and Heat Extremes to Enhance Inflationary Pressures},
+  author = {Kotz, Maximilian and Kuik, Friderike and Lis, Eliza and Nickel, Christiane},
+  year = {2024},
+  journal = {Communications Earth \& Environment},
+  volume = {5},
+  number = {1},
+  pages = {116},
+  publisher = {Nature Publishing Group UK London},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/87KG45DT/Kotz et al. - 2024 - Global warming and heat extremes to enhance inflat.pdf}
+}
+
+@article{letta2019,
+  title = {Weather, {{Climate}} and {{Total Factor Productivity}}},
+  author = {Letta, Marco and Tol, Richard S. J.},
+  year = {2019},
+  month = may,
+  journal = {Environmental and Resource Economics},
+  volume = {73},
+  number = {1},
+  pages = {283--305},
+  issn = {0924-6460, 1573-1502},
+  doi = {10.1007/s10640-018-0262-8},
+  urldate = {2024-10-29},
+  langid = {english},
+  file = {/Users/xolanisibande/Zotero/storage/RW86D72A/Letta and Tol - 2019 - Weather, Climate and Total Factor Productivity.pdf}
+}
+
+@article{liang2017,
+  title = {Determining Climate Effects on {{US}} Total Agricultural Productivity},
+  author = {Liang, Xin-Zhong and Wu, You and Chambers, Robert G. and Schmoldt, Daniel L. and Gao, Wei and Liu, Chaoshun and Liu, Yan-An and Sun, Chao and Kennedy, Jennifer A.},
+  year = {2017},
+  month = mar,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {114},
+  number = {12},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1615922114},
+  urldate = {2024-10-29},
+  abstract = {Significance             Projections of the economic consequences of climate change are valuable for policy making but generally rely on integrated assessments that cannot account for highly localized climate effects. Most agricultural climate impact studies focus on local effects or partial productivity measures insufficient to capture national economic outcomes. Here, we directly link climate variables in specific US regions to total factor productivity (TFP). We quantify the national economic consequences of past climate variations, identify critical agricultural regions with national significance, and project future changes in TFP under different climate scenarios. We provide a physical understanding of these climate-economic links, show that the agricultural economy is becoming increasingly sensitive to climate, and lay a more concrete foundation for informed decision-making.           ,              The sensitivity of agricultural productivity to climate has not been sufficiently quantified. The total factor productivity (TFP) of the US agricultural economy has grown continuously for over half a century, with most of the growth typically attributed to technical change. Many studies have examined the effects of local climate on partial productivity measures such as crop yields and economic returns, but these measures cannot account for national-level impacts. Quantifying the relationships between TFP and climate is critical to understanding whether current US agricultural productivity growth will continue into the future. We analyze correlations between regional climate variations and national TFP changes, identify key climate indices, and build a multivariate regression model predicting the growth of agricultural TFP based on a physical understanding of its historical relationship with climate. We show that temperature and precipitation in distinct agricultural regions and seasons explain {$\sim$}70\% of variations in TFP growth during 1981--2010. To date, the aggregate effects of these regional climate trends on TFP have been outweighed by improvements in technology. Should these relationships continue, however, the projected climate changes could cause TFP to drop by an average 2.84 to 4.34\% per year under medium to high emissions scenarios. As a result, TFP could fall to pre-1980 levels by 2050 even when accounting for present rates of innovation. Our analysis provides an empirical foundation for integrated assessment by linking regional climate effects to national economic outcomes, offering a more objective resource for policy making.},
+  langid = {english},
+  file = {/Users/xolanisibande/Zotero/storage/RSD3SF7N/Liang et al. - 2017 - Determining climate effects on US total agricultur.pdf}
+}
+
+@book{mejia2018,
+  title = {The Effects of Weather Shocks on Economic Activity: What Are the Channels of Impact?},
+  shorttitle = {The Effects of Weather Shocks on Economic Activity},
+  author = {Mejia, Mr Sebastian Acevedo and Mrkaic, Mr Mico and Novta, Natalija and Pugacheva, Evgenia and Topalova, Petia},
+  year = {2018},
+  publisher = {International Monetary Fund},
+  urldate = {2024-10-29}
+}
+
+@article{moessner2022,
+  title = {Effects of {{Precipitation}} on {{Food Consumer Price Inflation}}},
+  author = {Moessner, Richhild},
+  year = {2022},
+  publisher = {CESifo Working Paper},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/VXVZSJ7W/Moessner - 2022 - Effects of Precipitation on Food Consumer Price In.pdf}
+}
+
+@article{mukherjee2021,
+  title = {Climate and Monetary Policy: Do Temperature Shocks Lead to Inflationary Pressures?},
+  shorttitle = {Climate and Monetary Policy},
+  author = {Mukherjee, K. and Ouattara, B.},
+  year = {2021},
+  month = aug,
+  journal = {Climatic Change},
+  volume = {167},
+  number = {3-4},
+  pages = {32},
+  issn = {0165-0009, 1573-1480},
+  doi = {10.1007/s10584-021-03149-2},
+  urldate = {2024-10-29},
+  abstract = {Abstract             In the race towards economic growth, increased pollutant emissions have spurred the rise in global surface temperatures, intensifying the process of climate change. While the existing literature on the economic impact of climate-related variables has looked at outcomes such as growth, income, fiscal response, and poverty, the effect of temperature shocks on inflation has largely been neglected. This paper is an attempt to fill this lacuna. Indeed, we analyze the dynamic impact of temperature shocks on inflation, a key policy variable of most central banks. We use a panel-VAR method with fixed-effects and a sample of developed and developing countries over the period 1961--2014. Our results suggest that temperature shocks lead to inflationary pressures. Worryingly, and for developing countries in particular, we find that these effects persist several years after the initial shock. Our finding remained unaltered by various robustness checks. We show that these effects pose a threat to monetary policy making. We argue that central banks should pay more attention to temperature shocks.},
+  langid = {english},
+  file = {/Users/xolanisibande/Zotero/storage/ERZEQ2WF/Mukherjee and Ouattara - 2021 - Climate and monetary policy do temperature shocks.pdf}
+}
+
+@article{parker2018,
+  title = {The {{Impact}} of {{Disasters}} on {{Inflation}}},
+  author = {Parker, Miles},
+  year = {2018},
+  month = apr,
+  journal = {Economics of Disasters and Climate Change},
+  volume = {2},
+  number = {1},
+  pages = {21--48},
+  issn = {2511-1280, 2511-1299},
+  doi = {10.1007/s41885-017-0017-y},
+  urldate = {2024-10-29},
+  langid = {english},
+  file = {/Users/xolanisibande/Zotero/storage/Y4ZSIEIM/Parker - 2018 - The Impact of Disasters on Inflation.pdf}
+}
+
+@article{peersman2022,
+  title = {International Food Commodity Prices and Missing (Dis) Inflation in the Euro Area},
+  author = {Peersman, Gert},
+  year = {2022},
+  journal = {Review of Economics and Statistics},
+  volume = {104},
+  number = {1},
+  pages = {85--100},
+  publisher = {MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info {\dots}},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/8NX8IQV9/Peersman - 2022 - International food commodity prices and missing (d.pdf}
+}
+
+@article{ramankutty2010,
+  title = {Prevailing {{Myths About Agricultural Abandonment}} and {{Forest Regrowth}} in the {{United States}}},
+  author = {Ramankutty, Navin and Heller, Elizabeth and Rhemtulla, Jeanine},
+  year = {2010},
+  month = jun,
+  journal = {Annals of the Association of American Geographers},
+  volume = {100},
+  number = {3},
+  pages = {502--512},
+  issn = {0004-5608, 1467-8306},
+  doi = {10.1080/00045601003788876},
+  urldate = {2024-10-29},
+  langid = {english},
+  file = {/Users/xolanisibande/Zotero/storage/VWKDRM4Y/Ramankutty et al. - 2010 - Prevailing Myths About Agricultural Abandonment an.pdf}
+}
+
+@article{reis2010,
+  title = {Relative Goods' Prices, Pure Inflation, and the {{Phillips}} Correlation},
+  author = {Reis, Ricardo and Watson, Mark W.},
+  year = {2010},
+  journal = {American Economic Journal: Macroeconomics},
+  volume = {2},
+  number = {3},
+  pages = {128--157},
+  publisher = {American Economic Association},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/EVNUF4GL/Reis and Watson - 2010 - Relative goods' prices, pure inflation, and the Ph.pdf}
+}
+
+@inproceedings{schnabel2022,
+  title = {Monetary Policy and the Great Volatility},
+  booktitle = {Speech by {{Isabel Schnabel}}, {{Member}} of the {{Executive Board}} of the {{ECB}}, at the {{Jackson Hole Economic Policy Symposium}} Organised by the {{Federal Reserve Bank}} of {{Kansas City}}, {{Jackson Hole}}, {{Wyoming}}},
+  author = {Schnabel, Isabel},
+  year = {2022},
+  volume = {27},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/A4VY3K2U/Schnabel - 2022 - Monetary policy and the great volatility.pdf}
+}
+
+@article{stiglitz2023,
+  title = {The Causes of and Responses to Today's Inflation},
+  author = {Stiglitz, Joseph E. and Regmi, Ira},
+  year = {2023},
+  journal = {Industrial and Corporate Change},
+  volume = {32},
+  number = {2},
+  pages = {336--385},
+  publisher = {Oxford University Press UK},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/Z3JHRXVU/Stiglitz and Regmi - 2023 - The causes of and responses to today’s inflation.pdf}
+}
+
+@article{weber2023,
+  title = {Sellers' Inflation, Profits and Conflict: Why Can Large Firms Hike Prices in an Emergency?},
+  shorttitle = {Sellers' Inflation, Profits and Conflict},
+  author = {Weber, Isabella M. and Wasner, Evan},
+  year = {2023},
+  journal = {Review of Keynesian Economics},
+  volume = {11},
+  number = {2},
+  pages = {183--213},
+  publisher = {Edward Elgar Publishing Ltd},
+  urldate = {2024-10-29},
+  file = {/Users/xolanisibande/Zotero/storage/DCYJ95RP/article-p183.html}
+}
+
+@techreport{zappala2024,
+  title = {Estimating Sectoral Climate Impacts in a Global Production Network},
+  author = {Zappala, Guglielmo},
+  year = {2024},
+  institution = {mimeo},
+  urldate = {2024-10-29}
 }
