--- a/title.tex
+++ b/title.tex
@@ -1,24 +1,19 @@
-\title{Regulation and bank lending in South Africa: A narrative index approach}
+\title{Inflation in times of global warming}
 
 
-
-
-
-\author {Xolani Sibande\footnote{Economic Research Department, South African Reserve Bank; Email: xolani.sibande@resbank.co.za.} \and
-Dumakude Nxumalo\footnote{Department of Economics, University of Pretoria, Pretoria, South Africa; Email: dumakude.nxumalo@up.ac.za} \and
-Keaoleboga Mncube\footnote{Department of Economics, University of Pretoria, Pretoria, South Africa; Email: keaolebogamncube@gmail.com} \and
-Steve Koch\footnote{Department of Economics, University of Pretoria, Pretoria, South Africa; Email: steve.koch@up.ac.za} \and
-Nicola Viegi\footnote{Department of Economics, University of Pretoria, Pretoria, South Africa; Email: viegin@gmail.com}}
+\author {Serena Merrino \footnote{University College London, School of Slavonic and East European Studies, United Kingdom; Email: serena.merrino@resbank.co.za} \and
+Xolani Sibande\footnote{Economic Research Department, South African Reserve Bank; Email: xolani.sibande@resbank.co.za.}
+}
 
 
 \date{\today}
 \maketitle
 
 \begin{abstract}
-Duma.
+ipsum
 
 \end{abstract}
 
-\noindent\textbf{Keywords}: Bank lending, Narrative methods, Finance regulation\\
-\textbf{JEL Codes}: G01, G18, G28, G32, G38
+\noindent\textbf{Keywords}:
+\textbf{JEL Codes}:
 \newpage
